# monkewrite

./: Cargo.toml
src/: main.rs
