[package]
name = "monkewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "*"
lazy_static = "*"
num_cpus = "*"
fastrand = "*"
human_format = "1.0.3"

[features]
default = []
albert = []

[profile.release]
opt-level = 3
# debug = 1
